syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package ping;

// The Ping service definition.
service Ping {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  // Gets the age
  rpc GetAge (AgeRequest) returns (google.protobuf.Int32Value) {}

  // Checks the health of the service
  rpc CheckHealth (google.protobuf.Empty) returns (HealthResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

// The request message containing the age
message AgeRequest {
  int32 age = 1;
}

// The response message containing the health status
message HealthResponse {
  string status = 1;
}

